--- a/app/templates/sync.hbs
+++ b/app/templates/sync.hbs
@@ -1,1 +1,10 @@
-{{outlet}}
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h2 class="panel-title">{{model.name}} route</h2>
+  </div>
+  <div class="panel-body">
+    <p>{{model.name}} template content</p>
+
+    {{outlet}}
+  </div>
+</div>
