--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -6,11 +6,12 @@
       <div class="h2 panel-title">{{#link-to 'index'}}{{model.name}} route{{/link-to}}</div>
     </div>
     <div class="panel-body">
-      <p>{{model.name}} template content</p>
+      <p>Example Routes</p>
 
       <ul>
         <li>{{#link-to 'sync.inner1.inner2'}}synchronous nested route{{/link-to}}</li>
         <li>{{#link-to 'async.inner1.inner2'}}asychronous nested route{{/link-to}}</li>
+        <li>{{#link-to 'fizzbuzz-fail'}}random failure{{/link-to}}</li>
       </ul>
 
       {{outlet}}
